fix modal (z-index)

--- a/src/components/ModalWind/ModalWind.css
+++ b/src/components/ModalWind/ModalWind.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .modalWind i {
@@ -19,7 +20,7 @@
   max-width: 450px;
   width: 100%;
   position: fixed;
-  top: 20%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgb(249, 250, 251);
